--- a/GameOfLife/index.html
+++ b/GameOfLife/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Calculator</title>
-  <meta name="description" content="Calculator">
+  <title>GameOfLife</title>
+  <meta name="description" content="Game Of Life">
   <meta name="author" content="Xiaoyu Huang">
 
   <link rel="stylesheet" href="index.css">
